# Smart-Home-Core

./: .gitmodules  CMakeLists.txt  README.md  Timer1A.c  Timer1A.h  init.c  init.h  main.c  main.cpp  main.py  module.uvoptx  module.uvprojx
LoraAPI/: loraCommon.py  loraRX.py  loraTX.py
RTE/_Target_1/: RTE_Components.h
raspberryPi/: main.py  messageAPI.py  sysTest.py  test.py
reqs/SWDD/: .doorstop.yml  HEAD-1.0.yml  HEAD-1.1.yml  HEAD-1.3.yml  HEAD-2.1.1.yml  HEAD-2.1.2.yml  HEAD-2.1.3.yml  HEAD-2.4.yml  HEAD-3.0.yml  SWDD001.yml  SWDD002.yml  SWDD003.yml  SWDD004.yml  SWDD005.yml  SWDD006.yml  SWDD007.yml  SWDD008.yml  SWDD009.yml  SWDD010.yml  SWDD011.yml
reqs/SWRD/: .doorstop.yml  HEAD-1.0.yml  HEAD-1.2.yml  HEAD-1.3.yml  HEAD-1.4.yml  HEAD-2.0.yml  HEAD-2.1.yml  HEAD-2.2.yml  HEAD-2.3.yml  HEAD-3.1.yml  HEAD-4.0.yml  HEAD-4.1.yml  HEAD-4.2.yml  HEAD-5.0.yml  HEAD-5.1.yml  SWRD001.yml  SWRD0010.yml  SWRD0011.yml  SWRD0012.yml  SWRD0013.yml  SWRD002.yml  SWRD003.yml  SWRD004.yml  SWRD005.yml  SWRD006.yml  SWRD007.yml  SWRD008.yml  SWRD009.yml
reqs/docs/: SWDD.html  SWRD.html  index.html  traceability.csv
results/system/: console_api_system_test_results.txt  message_api_system_test_results.txt
src/: background_task.cpp  background_task.hpp  mailbox_map.hpp  main.cpp  test_mode.cpp  test_mode.hpp
tools/: CRC_gen.py  LoraRX.py  LoraTX.py  crc_gen.c  loraRX.py  loraTX.py  messageAPI.py
vnv/system/: console_api_system_test.py  message_api_system_test.py  pi_pico_test.py
vnv/system/lib/: msgAPI.py  pi_pico.py  results.py
